--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MrD9877.github.io/NewsApp/",
+  "homepage": "https://mrd9877.github.io/NewsOnline/",
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
